--- a/index.html
+++ b/index.html
@@ -809,7 +809,8 @@ body.light .rdlink{
 <div id="login">
   <div class="card glass login-card">
     <h2>Acesso ao CRM</h2>
-    <p>Escolha seu perfil para entrar.</p>
+    <p>Escolha seu perfil para entrar.</p
+    <p>Em Fase de Testes, Duvidas (51) 99725-8384</p>
     <div class="login-actions">
       <button onclick="entrarSDR()">Entrar como SDR</button>
       <button class="btn-secondary" onclick="entrarADM()">Entrar como ADM</button>
@@ -2542,3 +2543,4 @@ valorViradoInput.addEventListener("keydown", (e)=>{ if(e.key==="Enter") $("btnAd
 
 </body>
 </html>
+
